--- a/index.html
+++ b/index.html
@@ -5,13 +5,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Weather Dashboard</title>
 </head>
 
 <body>
-  
+  <header class="container text-center">
+    <h1 class="text-bg-primary">Weather Dashboard</h1>
+  </header>
+  <main class="row justify-content-evenly">
+    <!--search bar column-->
+    <section class="col-4">
+      <div>
+        <form>
+          <label for="searchCity">Search for a City:</label><br>
+          <input type="text" id="searchCity" placeholder="Enter City" name="searchCity" /><br>
+          <input type="submit" value="Submit">
+        </form>
+      </div>
 
+    </section>
+    <!--display current weather column-->
+    <section class="col-8">
+      <div id="currentCity" class="container-fluid border border-dark">
+        <h3>Current City</h3>
+      </div>
+      <h4>5 Day Forecast:</h4>
+      <div id="fiveDayForecast" class="row justify-content-evenly">
+        <div class="col-2 text-bg-dark">day 1</div>
+        <div class="col-2 text-bg-dark">day 2</div>
+        <div class="col-2 text-bg-dark">day 3</div>
+        <div class="col-2 text-bg-dark">day 4</div>
+        <div class="col-2 text-bg-dark">day 5</div>
+      </div>
+
+    </section>
+  </main>
+  
   <script src="./assets/js/script.js"></script>
 </body>
 
