bootstrap formatting and readme

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       </div>
       <h4>5 Day Forecast:</h4>
       <div id="fiveDayForecast" class="row justify-content-evenly">
-        <div class="col-2 text-bg-dark">day 1</div>
-        <div class="col-2 text-bg-dark">day 2</div>
-        <div class="col-2 text-bg-dark">day 3</div>
-        <div class="col-2 text-bg-dark">day 4</div>
-        <div class="col-2 text-bg-dark">day 5</div>
+        <div class="col-2 text-bg-dark">day 1 test</div>
+        <div class="col-2 text-bg-dark">day 2 test</div>
+        <div class="col-2 text-bg-dark">day 3 test</div>
+        <div class="col-2 text-bg-dark">day 4 test</div>
+        <div class="col-2 text-bg-dark">day 5 test</div>
       </div>
 
     </section>
